# cifar10-inference-acceleration

./: .gitignore  README.md  eval_latency_j2.py  eval_latency_resnet18_fp16.py  hyperparameters_j3.md  pyproject.toml  requirements.txt  results_j2_mobilenet_training.csv  results_resnet18_training.csv  train_mobilenet_j2.py  train_resnet18.py
docs/planning/: jour1.md  jour2.md  jour3.md  jour4.md  jour5.md  planning_5jours_cifar10_latence_gpu.tex
docs/report/: report.tex
docs/requirements/: exigences.tex
scripts/channels/: quick_channels_last_bench.py  results_channels.md
scripts/compile/: benchmark_compile_mobilenetv3.py  results_latence.md  results_mobilenetcompiled.md
scripts/distillation/: eval_latency_distil.py  reprise_results.md  results.md  resume_distill_mobilenet_j4.py  train_distill_mobilenet_j4.py
scripts/fp16/: eval_accuracy_fp16_mobilenetv3.py  eval_latency_mobilenetv3.py  eval_resnet18_fp16.py  fp16_inference_resnet18.py  fp16_resnet_results.md  fp16results.md
scripts/mobilenet_j2/: eval_latency_j2.py  hyperparameters_j2.md  train_mobilenet_j2.py
scripts/resnet_j3/: eval_latency_resnet18.py  evaluate_resnet18.py  hyperparameters_j3.md  model_size_resnet18.py  prepare_teacher_distillation.py  resume_trainingresnet18.py  teacher_distillation_output.md  train_resnet18.py
src/: Benchmark Javier.ipynb
src/cifaracce/: bench.py  config.py  data.py  test.py  validation.py
src/cifaracce/models/: __init__.py  cnnv1.py  mobileNet.py  resnet18.py
src/cifaracce/utils/: __init__.py  distillation.py  seed.py
